--- a/article.html
+++ b/article.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Jajji Profesor</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="intellect kokand" name="keywords">
-    <meta content="intellect kokand" name="description">
+    <meta content="EDU Kokand" name="keywords">
+    <meta content="EDU Kokand" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -35,8 +35,7 @@
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
             <img src="img/logo jp.png" width="90" height="90" alt="lorem">
             <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 25px;">
-                <span class="text-primary">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="red">J</font><font color="#9C0568">a</font><font color="blue">j</font><font color="#06960E">j</font><font color="#9C0568">i</font><br> 
-                    <font color="red">P</font><font color="black">r</font><font color="#E0D605">o</font><font color="#33F7EB">f</font><font color="#EDB426">e</font><font color="red">s</font><font color="#26D2ED">s</font><font color="#A54A4A">o</font><font color="blue">r</font></span>
+                <span class="text-primary"><font color="red">E</font><font color="#9C0568">D</font><font color="blue">U</font><font color="#E0D605"> </font><font color="#06960E">K</font><font color="#9C0568">o</font><font color="red">k</font><font color="black">a</font><font color="#E0D605">n</font><font color="#0840f7">d</font></span>
                     </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -273,8 +272,7 @@
                
                     <img src="img/logo jp.png" width="90" height="90" alt="lorem">
                     <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 25px;">
-                        <span class="text-primary">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="red">J</font><font color="#9C0568">a</font><font color="blue">j</font><font color="#06960E">j</font><font color="#9C0568">i</font><br> 
-                            <font color="red">P</font><font color="black">r</font><font color="#E0D605">o</font><font color="#33F7EB">f</font><font color="#EDB426">e</font><font color="red">s</font><font color="#26D2ED">s</font><font color="#A54A4A">o</font><font color="blue">r</font></span>
+                        <span class="text-primary"><font color="red">E</font><font color="#9C0568">D</font><font color="blue">U</font><font color="#E0D605"> </font><font color="#06960E">K</font><font color="#9C0568">o</font><font color="red">k</font><font color="black">a</font><font color="#E0D605">n</font><font color="#0840f7">d</font></span>
                             </a>
                 
                 <p>Labore dolor amet ipsum ea, erat sit ipsum duo eos. Volup amet ea dolor et magna dolor, elitr rebum duo est sed diam elitr. Stet elitr stet diam duo eos rebum ipsum diam ipsum elitr.</p>
