--- a/gallery.html
+++ b/gallery.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Intellect Kokand</title>
+    <title>EDU Kokand</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="intellect kokand" name="keywords">
-    <meta content="intellect kokand" name="description">
+    <meta content="EDU Kokand" name="keywords">
+    <meta content="EDU Kokand" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -35,8 +35,7 @@
     <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
         <img src="img/logo jp.png" width="90" height="90" alt="lorem">
         <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 25px;">
-            <span class="text-primary"><font color="red">I</font><font color="#9C0568">n</font><font color="blue">t</font><font color="#06960E">e</font><font color="#9C0568">l</font><font color="red">l</font><font color="black">e</font><font color="#E0D605">k</font><font color="#0840f7">t</font><br>
-                <font color="#EDB426">K</font><font color="red">o</font><font color="#26D2ED">k</font><font color="#A54A4A">a</font><font color="blue">n</font><font color="#26D2ED">d</font></span>
+            <span class="text-primary"><font color="red">E</font><font color="#9C0568">D</font><font color="blue">U</font><font color="#E0D605"> </font><font color="#06960E">K</font><font color="#9C0568">o</font><font color="red">k</font><font color="black">a</font><font color="#E0D605">n</font><font color="#0840f7">d</font></span>
                 </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -193,8 +192,7 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <img src="img/logo jp.png" width="90" height="90" alt="lorem">
                 <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 25px;">
-                    <span class="text-primary"><font color="red">I</font><font color="#9C0568">n</font><font color="blue">t</font><font color="#06960E">e</font><font color="#9C0568">l</font><font color="red">l</font><font color="black">e</font><font color="#E0D605">k</font><font color="#0840f7">t</font><br>
-                        <font color="#EDB426">K</font><font color="red">o</font><font color="#26D2ED">k</font><font color="#A54A4A">a</font><font color="blue">n</font><font color="#26D2ED">d</font></span>
+                    <span class="text-primary"><font color="red">E</font><font color="#9C0568">D</font><font color="blue">U</font><font color="#E0D605"> </font><font color="#06960E">K</font><font color="#9C0568">o</font><font color="red">k</font><font color="black">a</font><font color="#E0D605">n</font><font color="#0840f7">d</font></span>
                         </a>
                 <p>Labore dolor amet ipsum ea, erat sit ipsum duo eos. Volup amet ea dolor et magna dolor, elitr rebum duo est sed diam elitr. Stet elitr stet diam duo eos rebum ipsum diam ipsum elitr.</p>
                 <div class="d-flex justify-content-start mt-4">
@@ -221,7 +219,7 @@
                     <h4 class="fa fa-envelope text-primary"></h4>
                     <div class="pl-3">
                         <h5 class="text-white">Email</h5>
-                        <p>intelectkokand@example.com</p>
+                        <p>edukokand@example.com</p>
                     </div>
                 </div>
                 <div class="d-flex">
@@ -261,7 +259,7 @@
         </div>
         <div class="container-fluid pt-5" style="border-top: 1px solid rgba(23, 162, 184, .2);;">
             <p class="m-0 text-center text-white">
-                &copy; <a class="text-primary font-weight-bold" href="index.html">Intellect Kokand</a>. Barcha huquqlar himoyalangan.
+                &copy; <a class="text-primary font-weight-bold" href="index.html">EDU Kokand</a>. Barcha huquqlar himoyalangan.
                 <a class="text-primary font-weight-bold" href="https://rashidjon-dev.netlify.app">IT RISE UP</a>
             </p>
         </div>
